# prediction-arbs

./: .gitignore  main.py  pyproject.toml  utils.py
data/: kalshi.py  polymarket.py
